--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>MY DATA APP</title>
 </head>
 <body>
-<script src="app/js" type="module"></script>    
+<script src="app.js" type="module"></script>    
 </body>
 </html>
