firebase authentication complete sign up

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>MY DATA APP</title>
 </head>
 <body>
+    <div>
+        <h3>Create Account</h3>
+        <input type="email"id="signup_email" placeholder="Email">
+        <input type="password"id="signup_password" placeholder="password">
+        <button id="signup_btn">Create Account</button>
+    </div>
 <script src="app.js" type="module"></script>    
 </body>
 </html>
